[package]
name = "fiber-for-wasmedge"
version = "14.0.4"
authors = ["The Wasmtime Project Developers"]
description = "Wasmtime Fiber for WasmEdge"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/bytecodealliance/wasmtime"
edition = "2021"
# Wasmtime's current policy is that this number can be no larger than the
# current stable release of Rust minus 2.
rust-version = "1.71.0"

[dependencies]
cfg-if = "1.0"
wasmtime-versioned-export-macros = "=14.0.4"

[target.'cfg(unix)'.dependencies]
rustix = { version = "0.38.8", features = ["mm", "param"] }
wasmtime-asm-macros = "=14.0.4"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.48.0"
features = ["Win32_System_Threading", "Win32_Foundation"]

[build-dependencies]
cc = "1.0"
wasmtime-versioned-export-macros = "=14.0.4"

[dev-dependencies]
backtrace = "0.3.68"
